fix(k8s): fix tls secret name

--- a/deployment/production/k8s/ingress.yml
+++ b/deployment/production/k8s/ingress.yml
@@ -11,7 +11,7 @@ spec:
   tls:
     - hosts:
         - khai-demo.ukad.dev
-      secretName: {{ secret_name }}
+      secretName: khai-demo-umbraco-tls
   rules:
     - host: khai-demo.ukad.dev
       http:
